--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "start": "node dist/index.js",
     "dev": "node --loader ts-node/esm src/index.ts",
     "test": "node --loader ts-node/esm src/test.ts",
+    "zod-client": "npx openapi-zod-client \"http://localhost:8001/openapi.json\" -o \"./src/zodModel.ts\" --with-deprecated --with-description --with-docs --strict-objects",
     "lvapi": "swagger-typescript-api generate -p http://localhost:8001/openapi.json -o ./src/lvapi -n lvApi.ts --type-prefix LV --api-class-name=\"LVAPI\" --single-http-client"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "zod": "^3.22.4",
+    "@zodios/core": "^10.9.6",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.6",
-    "express": "^4.18.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
     "@types/sqlite3": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
