--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/sqlite3": "^3.1.11",
+    "prettier": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
   }
