--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@zodios/core": "^10.9.6",
     "express": "^4.18.2",
+    "htmlparser2": "^10.0.0",
     "sqlite3": "^5.1.6",
+    "turndown": "^7.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/sqlite3": "^3.1.11",
+    "@types/turndown": "^5.0.5",
     "prettier": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
